@@ -1,3 +1,9 @@
+2011-10-10  Sebastien Binet  <sebastien.binet@cern.ch>
+
+	* tagging PyUtils-00-11-01
+	* obo Joe Tuggle: add an ignore list to diff-poolfile
+	* M python/PoolFile.py
+
 2011-09-20  Sebastien Binet  <sebastien.binet@cern.ch>
 
 	* tagging PyUtils-00-11-00
